// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component | ArticleList.vue template should contain lazy when more than 9 articles 1`] = `
<div
  class="page"
>
  <main
    class="page__body"
  >
    <div
      class="page__container"
    >
      <section
        class="article-results"
      >
        <h1
          class="article-results__title hidden"
        >
          
          theArticlesOfTheTrip
        
        </h1>
         
        <p
          class="article-results__title h1"
        >
          
          title
        
        </p>
         
        <p
          class="article-results__title h2"
        >
          
          lastKnownPosition
          
          <span
            class="article-results__title h3"
          >
            
            
          
          </span>
        </p>
         
        <!---->
         
        <ul
          class="article-results__list"
        >
          <li
            class="article-results__item"
          >
            <article-card-stub
              article="[object Object]"
              lazy="true"
            />
          </li>
          <li
            class="article-results__item"
          >
            <article-card-stub
              article="[object Object]"
            />
          </li>
          <li
            class="article-results__item"
          >
            <article-card-stub
              article="[object Object]"
            />
          </li>
          <li
            class="article-results__item"
          >
            <article-card-stub
              article="[object Object]"
            />
          </li>
          <li
            class="article-results__item"
          >
            <article-card-stub
              article="[object Object]"
            />
          </li>
          <li
            class="article-results__item"
          >
            <article-card-stub
              article="[object Object]"
            />
          </li>
          <li
            class="article-results__item"
          >
            <article-card-stub
              article="[object Object]"
            />
          </li>
          <li
            class="article-results__item"
          >
            <article-card-stub
              article="[object Object]"
            />
          </li>
          <li
            class="article-results__item"
          >
            <article-card-stub
              article="[object Object]"
            />
          </li>
        </ul>
      </section>
    </div>
  </main>
</div>
`;

exports[`Component | ArticleList.vue template should match snapshot 1`] = `
<div
  class="page"
>
  <main
    class="page__body"
  >
    <div
      class="page__container"
    >
      <section
        class="article-results"
      >
        <h1
          class="article-results__title hidden"
        >
          
          fixWebsite
        
        </h1>
         
        <p
          class="article-results__title h1"
        >
          
          title
        
        </p>
         
        <p
          class="article-results__title h2"
        >
          
          lastKnownPosition
          
          <span
            class="article-results__title h3"
          >
            
            Mexico, 1er mai 2019
          
          </span>
        </p>
         
        <admin-dashboard-stub />
         
        <ul
          class="article-results__list"
        >
          <li
            class="article-results__item"
          >
            <article-card-stub
              adminmode="true"
              article="[object Object]"
            />
          </li>
          <li
            class="article-results__item"
          >
            <article-card-stub
              adminmode="true"
              article="[object Object]"
            />
          </li>
        </ul>
      </section>
    </div>
  </main>
</div>
`;
